--- a/src/main/webapp/resources/css/modal.css
+++ b/src/main/webapp/resources/css/modal.css
@@ -14,6 +14,7 @@
 
 /* Modal Content/Box */
 .modal-content {
+	display: none; /* Hidden by default */
     background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
