--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,11 +1,11 @@
 @CHARSET "UTF-8";
 
-#back {
+#back-review-session {
 	color: white;
 }
 
 #go-to-next-button {
-	display: block;
+	/*display: block;*/
 }
 
 #srs-buttons {
@@ -28,4 +28,51 @@
 #statistics-link {
 	cursor: pointer;
 	cursor: hand;
+}
+#add-deck-btn{margin-bottom:30px; }
+#add-deck-btn{background-color:#c94264; border-color:#c94264; font-weight:bold;}
+#add-deck-btn{background-color:#c94264; }
+.btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle){
+	border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+.button-div-2{margin-top:30px!important; padding-top:40px;width:140px; margin:0px auto!important;}
+.button-div{margin-top:30px; }
+.table th{
+	background:#337ab7;
+	color:#fff;
+}
+.table tr:nth-child(2n) {  
+    background: #f8f8f8;
+}
+.table tr:hover{
+	background:#b8dcf9;
+}
+.navbar-default{background-color:#337ab7; border-color:#337ab7; border-radius:0px!important;}
+
+.navbar-default .navbar-nav > li > a, .navbar-default .navbar-nav > li:hover > a, .navbar-default .navbar-brand{color:#fff;}
+.navbar-default .navbar-nav > li:hover {background: #b8dcf9;}
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover{background-color: #efefef;}
+
+.form-control, .btn{border-radius:0px;}
+.btn-color{background:#ccc;  }
+.navbar-nav > li > .dropdown-menu{border-radius:0px!important;}
+	
+.dropdown-menu > li > a:hover{color:#fff; background:#337ab7;}
+
+
+label{margin-top:5px; font-weight:normal;}
+.save{width:100%; font-weight:normal;}
+
+h2{font-weight:normal!important; margin-bottom:30px; font-size:27px;}
+.modal-lg{width:500px; border-radius:0px;}
+@media (min-width: 1200px) {
+  .container {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .container-2 {
+    width: 500px;
+  }
 }
